Upgraded tech stack